fixed overflow in the right place

--- a/src/documents/assets/css/syntax-highlight.less
+++ b/src/documents/assets/css/syntax-highlight.less
@@ -8,16 +8,12 @@ code {
   border-radius: 3px;
 }
 
-pre {
-  overflow: hidden;
-}
-
 pre code {
   display: inline-block;
   padding: 0.5em;
   color: #333;
   background: #f8f8ff;
-
+  overflow: hidden;
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
